--- a/JMSSA.plist
+++ b/JMSSA.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://sbj.jiangmen.gov.cn/Upload/MobileFiles/201503311705195842_JMSSA.ipa</string>
+					<string>https://raw.githubusercontent.com/GDDLKJ/JMSSA/master/JMSSA.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://sbj.jiangmen.gov.cn/Upload/MobileFiles/a114.png</string>
+					<string>https://raw.githubusercontent.com/GDDLKJ/JMSSA/master/a114.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>http://sbj.jiangmen.gov.cn/Upload/MobileFiles/a57.png</string>
+					<string>https://raw.githubusercontent.com/GDDLKJ/JMSSA/master/a57.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
